se arreglo los contenidos de la bar-navigation

--- a/Codigo/barras/navegacion.html
+++ b/Codigo/barras/navegacion.html
@@ -17,14 +17,18 @@
 					<td width="19%">
 						<li><a href="/Codigo/inicio/inicio.php">Inicio</a></li>
 					</td>
-					<td width="27%">&nbsp;</td>
-					<td width="9%">&nbsp;</td>
-					<td width="9%">&nbsp;</td>
-					<td width="13%">&nbsp;</td>
-					<td width="23%">&nbsp;</td>
-				</tr>
-				<tr colpan="2"><th colspan="5" nowrap><li><a href="/Codigo/salir/salir.php">Prueba</a></li></th>
-				  <th nowrap>hola</th>
+					<td width="27%"><li><a href="/Codigo/salir/salir.php">Prueba</a></li>
+					</td>
+					<td width="9%"><li><a href="/Codigo/bodega/apartadoenproduccion.php">Produccion</a></li></td>
+					<td width="9%"><li><a href="/Codigo/registros/registros.php">Registros</a></li></td>
+					<td width="13%"><li><a href=""></a></li></td>
+					<td width="23%"><li><a href=""></a></li></td>
+				<td colpan="2">
+					<th colspan="5" nowrap>
+						<li>
+							
+						</li>
+					</th>
 			    </tr>
 			</table>
 		</ul>
